--- a/webapp/index.html
+++ b/webapp/index.html
@@ -9,52 +9,48 @@
   <title>Atlanta Farm Garden Orchard home page</title>
 </head>
 
-<body>
-  <nav class="navbar navbar-expand-md bg-secondary navbar-dark">
+<body class="bg-light">
+  <nav class="navbar navbar-expand-md bg-primary navbar-dark">
     <div class="container">
-      <a class="navbar-brand" href="#">Brand</a>
-      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <a class="navbar-brand" href="#">
+        <i class="fa d-inline fa-lg fa-cloud"></i>
+        <b>Atlanta Farm Orchard Garden Database</b>
+      </a>
+      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbar2SupportedContent" aria-controls="navbar2SupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="#">Features</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Pricing</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link text-white" href="#">Contact us</a>
-          </li>
-        </ul>
-        <form class="form-inline m-0">
-          <input class="form-control mr-2" type="text" placeholder="Search">
-          <button class="btn btn-primary" type="submit">Search</button>
+      <div class="collapse navbar-collapse text-center justify-content-end" id="navbar2SupportedContent">
+        <form class="btn navbar-btn ml-2 text-white fa d-inline fa-lg fa-user-circle-o btn-primary" style="background-image: url('../../../farm.jpg');"> Email:
+          <input type="email" name="fname"> Password:
+          <input type="password" name="lname">
+          <a class="btn navbar-btn ml-2 text-white btn-secondary">
+            <i class="fa d-inline fa-lg fa-user-circle-o"></i> Sign in</a>
         </form>
       </div>
     </div>
   </nav>
-  <div class="py-5 text-center" style="background-image: url(&quot;https://pingendo.github.io/templates/sections/assets/cover_event.jpg&quot;);">
-    <div class="container py-5">
+  <b> </b>
+  <div class="py-5">
+    <div class="container">
       <div class="row">
-        <div class="col-md-12">
-          <h1 class="display-3 mb-4 text-primary">Atlanta Farm Garden Orchard Database
-            <br>
-          </h1>
-          <p class="lead mb-5">A database to the available garden orchard in Atlanta.</p>
-          <a href="#" class="btn btn-lg mx-1 btn-secondary">A claim here</a>
-          <a href="#" class="btn btn-lg btn-primary mx-1">Your call to action</a>
+        <div class="col-md-8">
+          <img class="img-fluid d-block" src="images/farm.jpg"> </div>
+        <div class="col-md-4">
+          <div style="font-size: 45px;"> New user?
+            <br> </div>
+          <div style="font-size:25px;"> Click one of the options below </div>
+          <br>
+          <br>
+          <div class="row">
+            <div class="form-group col-md-12">
+              <a class="btn btn-primary btn-lg" href="#">Sign up as a new Visitor</a>
+            </div>
+          </div>
+          <a class="btn btn-primary btn-lg" href="#">Sign up as a new owner </a>
         </div>
       </div>
     </div>
   </div>
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   <pingendo onclick="window.open('https://pingendo.com/', '_blank')" style="cursor:pointer;position: fixed;bottom: 10px;right:10px;padding:4px;background-color: #00b0eb;border-radius: 8px; width:180px;display:flex;flex-direction:row;align-items:center;justify-content:center;font-size:14px;color:white">Made with Pingendo&nbsp;&nbsp;
     <img src="https://pingendo.com/site-assets/Pingendo_logo_big.png" class="d-block" alt="Pingendo logo" height="16">
   </pingendo>
