--- a/webapp/index.html
+++ b/webapp/index.html
@@ -24,7 +24,7 @@
           <input type="email" name="fname"> Password:
           <input type="password" name="lname">
           <a class="btn navbar-btn ml-2 text-white btn-secondary">
-            <i class="fa d-inline fa-lg fa-user-circle-o"></i> Sign in</a>
+            <i class="fa d-inline fa-lg fa-user-circle-o" id="log-in-button"></i> Sign in</a>
         </form>
       </div>
     </div>
