--- a/login.html
+++ b/login.html
@@ -5,6 +5,35 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
         <link rel="stylesheet" href="https://v40.pingendo.com/assets/4.0.0/default/theme.css" type="text/css"> 
+        <script>
+            function checkLogin() {
+                console.log("Hi");
+
+                email = document.getElementById("email").value;
+                pass = document.getElementById("password").value;
+
+                let payload = {
+                    "email": email,
+                    "password": pass
+                }
+
+                console.log(payload);
+
+                var xhr = new XMLHttpRequest();
+                    xhr.onload = () => {
+                        var data = xhr.responseText;
+                        console.log("This is data" + data);
+
+                        if (data == "1") {
+                            console.log("Next page");
+                        }
+                    }
+
+                xhr.open("POST", "http://localhost:3000/login", true);
+                xhr.setRequestHeader("Content-Type", 'application/json');
+                xhr.send(JSON.stringify(payload));
+            }
+        </script>
     </head>
     <body>
         <nav class="navbar navbar-expand-md bg-primary navbar-dark">
@@ -28,16 +57,16 @@
                         </div>
                         <form>
                             <div class="form-group">
-                                <input id="email" onkeyup="validateEmails()" onblur="validateEmail(); checkEmail()" type="email" class="form-control" placeholder="*Enter email"> 
+                                <input id="email" type="email" class="form-control" placeholder="*Enter email"> 
                             </div>
                             <div class="form-group">
-                                <input id="password" onkeyup="validatePasswords()" onblur="validatePassword(); checkPassword()" type="password" class="form-control" placeholder="*Enter password"> 
+                                <input id="password" type="password" class="form-control" placeholder="*Enter password"> 
                             </div>
-                            <a href="">
-                                <button type="submit" class="btn btn-primary text-white" onclick="storeinfo()">
-                                    <a href="loginhome.html" class="text-white">Log In</a>
+
+                                <button class="btn btn-primary text-white" onclick="checkLogin()">
+                                    Log In
                                 </button>
-                            </a>
+
                         </form>
                     </div>
                 </div>
