Link up owner homepage to database

--- a/login.html
+++ b/login.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="https://v40.pingendo.com/assets/4.0.0/default/theme.css" type="text/css"> 
         <script>
             function checkLogin() {
-                console.log("Hi");
+                console.log("Logging in");
 
                 email = document.getElementById("email").value;
                 pass = document.getElementById("password").value;
