--- a/webapp/loginhome.html
+++ b/webapp/loginhome.html
@@ -6,6 +6,40 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
   <link rel="stylesheet" href="https://v40.pingendo.com/assets/4.0.0/default/theme.css" type="text/css"> </head>
+  <script>
+      function getProperties(email, ownerType) {
+            let payload = {
+                "email": email,
+                "type": ownerType
+            }
+
+            var propertyArray;
+
+                console.log(payload);
+
+                var xhr = new XMLHttpRequest();
+                    xhr.onload = () => {
+                        var data = xhr.responseText;
+
+                        console.log("This is data" + data);
+                        propertyArray = JSON.parse(data);
+
+                        if (data != "0") {
+                            //window.location.replace("webapp/loginhome.html");
+                            console.log("Completed");
+                        }
+                    }
+
+                xhr.open("POST", "http://localhost:3000/properties", true);
+                xhr.setRequestHeader("Content-Type", 'application/json');
+                xhr.send(JSON.stringify(payload));
+
+
+      }
+      window.onload = function() {
+          getProperties("farmerJoe@gmail.com", "ownerProps");
+      }
+  </script>
 
 <body>
   <nav class="navbar navbar-expand-md bg-primary navbar-dark">
