--- a/webapp/loginhome.html
+++ b/webapp/loginhome.html
@@ -37,6 +37,7 @@
 
       }
       window.onload = function() {
+          console.log("Cookies" + document.cookie);
           getProperties("farmerJoe@gmail.com", "ownerProps");
       }
   </script>
