--- a/login.html
+++ b/login.html
@@ -5,13 +5,15 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
         <link rel="stylesheet" href="https://v40.pingendo.com/assets/4.0.0/default/theme.css" type="text/css">
+        <script src="webapp/js/md5.min.js"></script>
         <script>
+
             function checkLogin() {
                 console.log("Logging in");
 
                 email = document.getElementById("email").value;
                 pass = document.getElementById("password").value;
-
+                pass = md5(pass);
                 let payload = {
                     "email": email,
                     "password": pass
