--- a/confirmproperties.html
+++ b/confirmproperties.html
@@ -30,7 +30,7 @@
             <div class="py-2">
                 <button class="btn btn-outline-primary dropdown-toggle ml-2">Search By </button>
                 <button class="btn ml-2 text-white btn-primary">Search Properties</button>
-                <button class="btn ml-2 text-white btn-primary">Manage Selected Properties</button>
+                <button class="btn ml-2 text-white btn-primary">Manage Selected Property</button>
                 <button class="btn ml-2 text-white btn-primary">Back</button>
             </div>
         </div>
