--- a/login.html
+++ b/login.html
@@ -25,8 +25,9 @@
                         console.log("This is data" + data);
 
                         if (data != "0") {
-                            document.cookie = "type=" + data;
-                            document.cookie = "email=" + email;
+                            document.cookie = "type=" + data + "; expires=Thu, 26 Apr 2018 12:00:00 UTC;";
+                            document.cookie = "email=" + email + "; expires=Thu, 26 Apr 2018 12:00:00 UTC;";
+
                             window.location.replace("webapp/loginhome.html");
                             console.log("Next page");
                         }
