--- a/login.html
+++ b/login.html
@@ -33,6 +33,9 @@
                             window.location.replace("webapp/loginhome.html");
                             console.log("Next page");
                         }
+                        else{
+                            console.log("Login failed")
+                        }
                     }
 
                 xhr.open("POST", "http://localhost:3000/login", true);
